# SVLynx

./: .env.example  .gitignore  Caddyfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  package-lock.json  svlynx  tempCodeRunnerFile.yml
cmd/app/: main.go
front/: .env.production  index.html  package-lock.json  vite.config.js
media_server/: CMakeLists.txt  media_server.cpp  media_server_linux
migrations/: 000001_create_chats.up.sql  000001_init.up.sql  000003_create_chat_members.up.sql  000004_create_messages.down.sql  000004_create_messages.up.sql  000004_init.up.sql  000005_add_profile_completed_to_users.down.sql  000005_add_profile_completed_to_users.up.sql  000006_add_last_seen.down.sql  000006_add_last_seen.up.sql  000007_add_is_online.down.sql  000007_add_is_online.up.sql  000008_add_message_type.down.sql  000008_add_message_type.up.sql  000008_create_push_subscriptions.up.sql  000010_add_duration_to_messages.down.sql  000011_add_media_fields.down.sql  000011_add_media_fields.up.sql  000012_create_channels.down.sql  000012_create_channels.up.sql  000013_create_channels_posts.down.sql  000013_create_channels_posts.up.sql  000014_create_channels_invite_links.down.sql  000014_create_channels_invite_links.up.sql  000015_add_reply_to.down.sql  000015_add_reply_to.up.sql  000016_add_is_developer.down.sql  000016_add_is_developer.up.sql  000017_create_groups.down.sql  000017_create_groups.up.sql  000018_create_group_members.up.sql  000019_create_group_bans.down.sql  000019_create_group_bans.up.sql  (+6 more)
voice_server/: .gitignore  CMakeLists.txt  voice_server  voice_server.cpp  voice_server_linux
(+114 files in other folders)
